codebase/SFDC deploy Components/src/objects/InsuranceMaster__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>InsuranceMaster</relationshipLabel>
        <relationshipName>InsuranceMaster</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VehicleTypeMaster__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>VehicleTypeMaster</label>
        <referenceTo>VehicleTypeMaster__c</referenceTo>
        <relationshipLabel>InsuranceMaster</relationshipLabel>
        <relationshipName>InsuranceMaster</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_No__c</fullName>
        <label>Vehicle No</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>InsuranceMaster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{00000000}</displayFormat>
        <label>InsuranceMaster ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InsuranceMaster</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>